--- a/register.html
+++ b/register.html
@@ -3,50 +3,28 @@
 
 <head>
     <title>Register</title>
- </head>   
-
+</head>
 
 <body>
-        <div style="text-align: center;">
-        <h1>Registration Page</h1>
-        <div>
-         <input type="text" placeholder="Username" id="txtUsername">
-        </div>
-        <div>
-            <input type="password" placeholder="Password" id="txtPassword">
-        </div>
-        <div>
-            <input type="password" placeholder="Confirm Password" id="txt ConfirmPassword">
-        </div>
-        <div>
-            <input type="number" placeholder="Age" id="txtAge">
-        </div>
-        <div>
-            <button id="btnRegister">Register</button>
-        </div>        
-    </body>
-    <script src=".register.js"></script>
+    <div style="text-align: center;">
+    <h1>Registration Page</h1>
+    <div>
+        <input type="text" placeholder="Username" id="txtUsername">
+    </div>
+    <div>
+        <input type="password" placeholder="Password" id="txtPassword">
+    </div>
+    <div>
+        <input type="password" placeholder="Confirm Password" id="txtConfirmPassword">
+    </div>
+    <div>
+        <input type="number" placeholder="Age" id="txtAge">
+    </div>
+    <div>
+        <button id="btnRegister">Register</button>
+    </div>
+</div>
+</body>
+ <script src="register.js"></script> 
 
-    </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-   
+ </html>
